--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
           </ul>
         </div>
       </section>
-
       <section class="portfolio" id="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
@@ -170,6 +169,81 @@
                 <div class="portfolio-card-content">
                   <h3 class="portfolio-subtitle">Banking App</h3>
                   <p class="portfolio-text">App</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-2.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                />
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-3.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App"
+                />
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-subtitle">Meditation App</h3>
+                  <p class="portfolio-text">App</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-4.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service"
+                />
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-subtitle">Taxi Service</h3>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-5.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustrations"
+                />
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                  <p class="portfolio-text">Design</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/img-6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses"
+                />
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-subtitle">Online Courses</h3>
+                  <p class="portfolio-text">Marketing</p>
                 </div>
               </a>
             </li>
