--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <section class="features" id="studio">
         <div class="container">
-          <h2 class="visually-hidden">Our Features</h2>
+          <h2 class="features-title">Our Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-subtitle">Strategy</h3>
